--- a/fase3/index.html
+++ b/fase3/index.html
@@ -66,7 +66,7 @@
                 <img src="imagenes/htmlcss.jpg" width="400" height="300" alt="HTML/CSS">
                 <br>
 
-                <p>HTML es un Lenguaje de marcado de hipertexto, se utiliza para estructurar y diseñar una página web y todos sus contenidos, contenidos que podrían ser párrafos, una lista con viñetas, imágenes y tablas de datos, entre otros. HTML no es
+                <p>HTML, es un Lenguaje de marcado de hipertexto, se utiliza para estructurar y diseñar una página web y todos sus contenidos, contenidos que podrían ser párrafos, una lista con viñetas, imágenes y tablas de datos, entre otros. HTML no es
                     un lenguaje de programación; es un lenguaje de marcado que define la estructura de tu contenido. <br>HTML consiste en una serie de elementos que son usados para encerrar diferentes partes del contenido para que se vean de una determinada
                     manera. Las etiquetas de encierre pueden hacer de una palabra o una imagen un hipervínculo a otro sitio, se pueden cambiar palabras a cursiva, agrandar o achicar la letra, etc.
 
