--- a/fase3/index.html
+++ b/fase3/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina vista en pestaña</title>
+    <title>Fase 3</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
@@ -72,13 +72,11 @@
 
                 </p><br/>
 
-                <aside>
-                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Ffacebook.com%2Fpages%2Fcategory%2FCollege---University%2FUniversidad-Nacional-Abierta-y-a-Distancia-UNAD-CCAV-Sahag%25C3%25BAn-103912416372639%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                        width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-                </aside>
-
         </section>
-
+        <aside>
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Ffacebook.com%2Fpages%2Fcategory%2FCollege---University%2FUniversidad-Nacional-Abierta-y-a-Distancia-UNAD-CCAV-Sahag%25C3%25BAn-103912416372639%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+        </aside>
     </main>
     <footer>Pagina 1:Etiquetas Básicas de HTML, Aributos y Valores</footer>
 
