--- a/fase2/index.html
+++ b/fase2/index.html
@@ -21,8 +21,10 @@
     </h4>
 
     <!--Enlace fase 2 -->
-    <h2>Fase 2 del proyecto:</h2>
+    <h2>Fases del proyecto:</h2>
     <a href="fase2/desing.html">Enlace fase 2</a>
+    <a href="fase3/">Enlace fase 3</a>
+    <a href="fase4/">Enlace fase 4</a>
 </body>
 
 </html>
