--- a/fase2/index.html
+++ b/fase2/index.html
@@ -22,8 +22,8 @@
 
     <!--Enlace fase 2 -->
     <h2>Fases del proyecto:</h2>
-    <a href="fase2/desing.html">Enlace fase 2</a>
-    <a href="fase3/">Enlace fase 3</a>
+    <a href="fase2/desing.html">Enlace fase 2</a><br>
+    <a href="fase3/">Enlace fase 3</a> <br>
     <a href="fase4/">Enlace fase 4</a>
 </body>
 
