--- a/fase2/index.html
+++ b/fase2/index.html
@@ -24,7 +24,7 @@
     <h2>Fases del proyecto:</h2>
     <a href="fase2/desing.html">Enlace fase 2</a><br>
     <a href="fase3/">Enlace fase 3</a> <br>
-    <a href="fase4/">Enlace fase 4</a>
+    <a href="https://hugo774s.github.io/DSW-HugoSantacruz/fase4/index.html">Enlace fase 4</a>
 </body>
 
 </html>
