--- a/fase2/index.html
+++ b/fase2/index.html
@@ -22,8 +22,8 @@
 
     <!--Enlace fase 2 -->
     <h2>Fases del proyecto:</h2>
-    <a href="fase2/desing.html">Enlace fase 2</a><br>
-    <a href="fase3/">Enlace fase 3</a> <br>
+    <a href="https://hugo774s.github.io/DSW-HugoSantacruz/fase2/">Enlace fase 2</a><br>
+    <a href="https://hugo774s.github.io/DSW-HugoSantacruz/fase3/">Enlace fase 3</a> <br>
     <a href="https://hugo774s.github.io/DSW-HugoSantacruz/fase4/index.html">Enlace fase 4</a>
 </body>
 
